fix(style): header z-index

--- a/src/app/styles/nav.sass
+++ b/src/app/styles/nav.sass
@@ -4,7 +4,6 @@
   z-index: 90 !important
   background-color: $white
   position: relative
-  box-shadow: 1px 2px 5px rgba($black, 0.1)
 
   .nav-logo
     margin-left: -10px
@@ -208,7 +207,7 @@
     padding-bottom: 30px
     display: flex
     align-items: center
-    z-index: 95 !important
+    z-index: 80 !important
     box-shadow: 1px 2px 5px rgba($black, 0.1)
     border-bottom: none
     height: 50px
